fixed vertical overlap

--- a/TheWebGator/src/Components/Home.css
+++ b/TheWebGator/src/Components/Home.css
@@ -42,7 +42,7 @@ body {
 
 #section5 {
     width: 100vw;
-    height: 91vh;
+    height: 81vh;
 }
 
 #section4 {
@@ -156,7 +156,6 @@ body {
 
 #start-quote {
     margin-left: 11%;
-    margin-top: 10%;
     color: crimson;
 }
 
